logan h final commit

--- a/013 Challenge/013 Challenge.csproj
+++ b/013 Challenge/013 Challenge.csproj
@@ -7,4 +7,14 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Antonios Pizza-restaurant.jpg" />
+    <None Remove="Atkins-Wood-BG.jpg" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Antonios Pizza-restaurant.jpg" />
+    <Resource Include="Atkins-Wood-BG.jpg" />
+  </ItemGroup>
+
 </Project>
